--- a/package.json
+++ b/package.json
@@ -12,7 +12,28 @@
     "unit.js": "^2.0.0"
   },
   "scripts": {
+    "install": "npm run build",
+    "build": "",
+    "start": "node server.js",
+    "build-start": "npm run build && npm run start"
+    "reload-start": "npm run reloadDB && npm run build-start",
+    "dev": "npm run reload-start",
     "test": "mocha test/[^_]*.js --bail",
-    "mocha": "mocha"
+    "mocha": "mocha",   
+    "cron": "",
+    "createDB": "",
+    "importDB": "mongoimport -d $db -c $collection --file ",
+    "seedDB": "mongoimport -d $db -c $collection --file $filepath",
+    "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
+    "reloadDB": "npm run dropDB && npm run seedDB",
+    "exportDB": "",
+    "startDB": "",   
+    "createSQL": "",
+    "importSQL": "",
+    "seedSQL": "",
+    "dropSQL": "",
+    "reloadSQL": "",
+    "exportSQL": "",
+    "startSQL": ""
   } 
 }
