--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "build-start": "npm run build && npm run start",
     "watch-start": "npm run watch && npm run start",
     "dev": "npm run reload && npm run build && npm run watch-start",
-    "stop": "node server.js",
+    "stop": "npm run stopDB && npm run stopSQL",
+    "restart": "npm run stop && npm run start",    
     "==TESTING==": "",
     "test": "mocha test/[^_]*.js --bail",
     "env": "env",
     "==DATABASE1==": "",
     "createDB": "",
-    "importDB": "mongoimport -d $db -c $collection --file ",
-    "seedDB": "mongoimport -d $db -c $collection --file $filepath",
+    "importDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file ",
+    "seedDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file $db.seed",
     "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
     "reloadDB": "npm run dropDB && npm run seedDB",
     "exportDB": "",
     "startDB": "",
+    "stopDB": "",    
+    "destroyDB": ""
     "==DATABASE2==": "",
     "createSQL": "",
     "importSQL": "",
@@ -47,8 +50,21 @@
     "reloadSQL": "",
     "exportSQL": "",
     "startSQL": "",
+    "stopSQL": "",
+    "destroySQL": ""
+    "==UNINSTALL==": "",
+    "uninstall": "npm run destroyDB && npm run destroySQL"
     "==OTHER==": "",
     "cron": "",
     "cleanup": ""
+  },
+  "db": {
+  	"name": "exampleDatabase"
+  	"collection": "exampleCollection",
+  	"seed": "exampleSeed.json"
+  },
+  "sql": {
+  	"name": "",
+  	"seed": ""
   }
 }
