--- a/package.json
+++ b/package.json
@@ -13,56 +13,57 @@
     "unit.js": "^2.0.0"
   },
   "scripts": {
-    "==BUILDING==": "",
+    "==BUILDING==": " ",
     "postinstall": "bower install && npm run build",
     "postupdate": "bower update && npm run build",
-    "build": "",
-    "==WATCHING==": "",
+    "build": " ",
+    "==WATCHING==": " ",
     "watch": "npm run watch-css & npm run watch-js & npm run watch-server",
-    "watch-css": "",
-    "watch-js": "",
-    "watch-server": "",
-    "==RUNNING==": "",
+    "watch-css": " ",
+    "watch-js": " ",
+    "watch-server": " ",
+    "==RUNNING==": " ",
     "start": "node server.js",
     "build-start": "npm run build && npm run start",
     "watch-start": "npm run watch && npm run start",
     "dev": "npm run reload && npm run build && npm run watch-start",
     "stop": "npm run stopDB && npm run stopSQL",   
-    "==TESTING==": "",
+    "==TESTING==": " ",
     "test": "mocha test/[^_]*.js --bail",
     "env": "env",
-    "==DATABASE1==": "",
-    "createDB": "",
+    "==DATABASE1==": " ",
+    "createDB": " ",
     "importDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file ",
     "seedDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file $npm_package_db_seed",
     "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
     "reloadDB": "npm run dropDB && npm run seedDB",
-    "exportDB": "",
-    "startDB": "",
-    "stopDB": "",    
-    "destroyDB": "",
-    "==DATABASE2==": "",
-    "createSQL": "",
-    "importSQL": "",
-    "seedSQL": "",
-    "dropSQL": "",
-    "reloadSQL": "",
-    "exportSQL": "",
-    "startSQL": "",
-    "stopSQL": "",
-    "destroySQL": "",
-    "==UNINSTALL==": "",
+    "exportDB": " ",
+    "startDB": " ",
+    "stopDB": " ",    
+    "destroyDB": " ",
+    "==DATABASE2==": " ",
+    "createSQL": " ",
+    "importSQL": " ",
+    "seedSQL": " ",
+    "dropSQL": " ",
+    "reloadSQL": " ",
+    "exportSQL": " ",
+    "startSQL": " ",
+    "stopSQL": " ",
+    "destroySQL": " ",
+    "==UNINSTALL==": " ",
     "uninstall": "npm run destroyDB && npm run destroySQL",
-    "==OTHER==": "",
-    "cron": "",
-    "cleanup": ""
+    "==OTHER==": " ",
+    "cron": " ",
+    "cleanup": " "
   },
   "db": {
   	"name": "exampleDatabase",
   	"collection": "exampleCollection",
   	"seed": "exampleSeed.json"
   },
-  "sql": {
+  "sql": {  
+  	"port": "",
   	"name": "",
   	"seed": ""
   }
