added compile tasks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "==BUILDING==": " ",
     "postinstall": "bower install && npm run build",
     "postupdate": "bower update && npm run build",
-    "build": " ",
+    "build": "npm run compile-css && npm run compile-js",
+    "compile-css": " ",
+    "compile-js": " ",    
     "==WATCHING==": " ",
     "watch": "npm run watch-css & npm run watch-js & npm run watch-server",
     "watch-css": " ",
