--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postupdate": "bower update && npm run build",
     "build": "npm run compile-css && npm run compile-js",
     "compile-css": " ",
-    "compile-js": " ",    
+    "compile-js": " ",
+    "clean": " "
     "==WATCHING==": " ",
     "watch": "npm run watch-css & npm run watch-js & npm run watch-server",
     "watch-css": " ",
@@ -58,10 +59,10 @@
     "stopSQL": " ",
     "destroySQL": " ",
     "==UNINSTALL==": " ",
-    "uninstall": "npm run destroyDB && npm run destroySQL",
+    "uninstall": "npm run destroyDB && npm run destroySQL && npm run clean",
     "==OTHER==": " ",
     "cron": " ",
-    "cleanup": " "
+    "archive": " "
   },
   "db": {
     "name": "exampleDatabase",
