--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "env": "env",
     "==DATABASE1==": " ",
     "createDB": " ",
-    "importDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file ",
-    "seedDB": "mongoimport -d $npm_package_db_name -c $npm_package_db_collection --file $npm_package_db_seed",
+    "importDB": "mongoimport -d $npm_package_config_db_name -c $npm_package_config_db_collection --file ",
+    "seedDB": "mongoimport -d $npm_package_config_db_name -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
     "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
     "reloadDB": "npm run dropDB && npm run seedDB",
     "exportDB": " ",
@@ -64,14 +64,16 @@
     "cron": " ",
     "archive": " "
   },
-  "db": {
-    "name": "exampleDatabase",
-    "collection": "exampleCollection",
-    "seed": "exampleSeed.json"
-  },
-  "sql": {
-    "port": "",
-    "name": "",
-    "seed": ""
+  "config": {
+    "db": {
+      "name": "exampleDatabase",
+      "collection": "exampleCollection",
+      "seed": "exampleSeed.json"
+    },
+    "sql": {
+      "port": "",
+      "name": "",
+      "seed": ""
+    }  
   }
 }
