--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "npm run compile-css && npm run compile-js",
     "compile-css": " ",
     "compile-js": " ",
-    "clean": " "
+    "clean": " ",
     "==WATCHING==": " ",
     "watch": "npm run watch-css & npm run watch-js & npm run watch-server",
     "watch-css": " ",
