--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "==BUILDING==": " ",
     "postinstall": "bower install && npm run build",
     "postupdate": "bower update && npm run build",
-    "build": "npm run compile-css && npm run compile-js",
+    "build": "npm run compile",
+    "compile": "npm run compile-css && npm run compile-js",
     "compile-css": " ",
     "compile-js": " ",
     "==WATCHING==": " ",
