finished figuring out testing commands

--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "==TESTING==": " ",
     "test": "mocha test/[^_]*.js --bail",
     "mocha": "mocha",
-    "test-all": "mocha || true",
-    "test-file": "mocha test/<file>",    
-    "test-grep": "mocha test/*.js --grep <term>",
+    "test-grep": "mocha --grep",
     "env": "env",
     "bin": "ls ./node_modules/.bin/",
     "==DATABASE1==": " ",
