simplified build system

--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
   },
   "scripts": {
     "==BUILDING==": " ",
-    "postinstall": "bower install && npm run build",
-    "postupdate": "bower update && npm run build",
+    "postinstall": "npm-run-all bower-install build",
+    "postupdate": "npm-run-all bower-update build",
     "build": "npm run compile",
-    "compile": "npm run compile-css && npm run compile-js",
+    "compile": "npm-run-all compile-css compile-js",
     "compile-css": " ",
     "compile-js": " ",
+    "bower-install": "bower install",
+    "bower-update": "bower update",
     "==WATCHING==": " ",
-    "watch": "npm run watch-css & npm run watch-js & npm run watch-server",
+    "watch": "npm-run-all watch-css watch-js watch-server",
     "watch-css": " ",
     "watch-js": " ",
     "watch-server": " ",
     "==RUNNING==": " ",
     "start": "node server.js",
-    "build-start": "npm run build && npm run start",
-    "watch-start": "npm run watch && npm run start",
-    "dev": "npm run reload && npm run build && npm run watch-start",
-    "stop": "npm run stopDB && npm run stopSQL",
+    "build-start": "npm-run-all build start",
+    "watch-start": "npm-run-all watch start",
+    "dev": "npm-run-all reload build watch-start",
+    "stop": "npm-run-all stopDB stopSQL",
     "==TESTING==": " ",
     "test": "mocha test/[^_]*.js --bail",
     "mocha": "mocha",
@@ -39,26 +41,25 @@
     "bin": "ls ./node_modules/.bin/",
     "==DATABASE1==": " ",
     "createDB": " ",
-    "importDB": "mongoimport -d $npm_package_config_db_name -c $npm_package_config_db_collection --file ",
     "seedDB": "mongoimport -d $npm_package_config_db_name -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
     "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
-    "reloadDB": "npm run dropDB && npm run seedDB",
+    "reloadDB": "npm-run-all dropDB seedDB",
     "exportDB": " ",
     "startDB": " ",
     "stopDB": " ",
     "destroyDB": " ",
     "==DATABASE2==": " ",
-    "createSQL": " ",
-    "importSQL": " ",
-    "seedSQL": " ",
-    "dropSQL": " ",
-    "reloadSQL": " ",
+    "createSQL": "echo \"create database $npm_package_config_sql_dbname\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass",
+    "seedSQL": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass $npm_package_config_sql_dbname < $npm_package_config_sql_seed",
+    "dropSQL": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_dbname\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass",
+    "loadSQL": "npm-run-all createSQL seedSQL",
+    "reloadSQL": "npm-run-all dropSQL loadSQL",
     "exportSQL": " ",
     "startSQL": " ",
     "stopSQL": " ",
     "destroySQL": " ",
     "==UNINSTALL==": " ",
-    "uninstall": "npm run destroyDB && npm run destroySQL && npm run clean",
+    "uninstall": "npm-run-all destroyDB destroySQL clean",
     "clean": " ",    
     "==OTHER==": " ",
     "cron": " ",
@@ -68,12 +69,13 @@
     "db": {
       "name": "exampleDatabase",
       "collection": "exampleCollection",
-      "seed": "exampleSeed.json"
+      "seed": "/files/seed.json"
     },
     "sql": {
-      "port": "",
-      "name": "",
-      "seed": ""
+      "name": "dbname", 
+      "user": "",
+      "pass": "",
+      "seed": "/files/seed.sql"
     }  
   }
 }
