--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "stopDB": " ",
         "destroyDB": " ",
     "==MySQL==": " ",
-        "createSQL": "echo \"create database $npm_package_config_sql_dbname\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass",
+        "createSQL": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_dbname\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass",
         "seedSQL": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass $npm_package_config_sql_dbname < $npm_package_config_sql_seed",
         "dropSQL": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_dbname\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_pass",
         "loadSQL": "npm-run-all createSQL seedSQL",
