replaced npm-run-all with run-s syntax

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "dylanized",
   "license": "MIT",
   "dependencies": {
-    "npm-run-all": "^1.5.1"
+    "run-s -l": "^1.5.1"
   },
   "devDependencies": {
     "mocha": "^2.4.4",
@@ -14,25 +14,25 @@
   },
   "scripts": {
     "==BUILDING==": " ",
-        "postinstall": "npm-run-all bower-install build",
-        "postupdate": "npm-run-all bower-update build",
+        "postinstall": "run-s -l bower-install build",
+        "postupdate": "run-s -l bower-update build",
         "build": "npm run compile",
-        "compile": "npm-run-all compile-css compile-js",
+        "compile": "run-s -l compile-css compile-js",
         "compile-css": " ",
         "compile-js": " ",
         "bower-install": "bower install",
         "bower-update": "bower update",
     "==WATCHING==": " ",
-        "watch": "npm-run-all watch-css watch-js watch-server",
+        "watch": "run-s -l watch-css watch-js watch-server",
         "watch-css": " ",
         "watch-js": " ",
         "watch-server": " ",
     "==RUNNING==": " ",
         "start": "node server.js",
-        "build-start": "npm-run-all build start",
-        "watch-start": "npm-run-all watch start",
-        "dev": "npm-run-all reload build watch-start",
-        "stop": "npm-run-all stopDB stopSQL",
+        "build-start": "run-s -l build start",
+        "watch-start": "run-s -l watch start",
+        "dev": "run-s -l reload build watch-start",
+        "stop": "run-s -l stopDB stopSQL",
     "==TESTING==": " ",
         "test": "mocha test/[^_]*.js --bail",
         "mocha": "mocha",
@@ -44,7 +44,7 @@
         "importDB": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file ",
         "seedDB": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
         "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
-        "reloadDB": "npm-run-all dropDB seedDB",
+        "reloadDB": "run-s -l dropDB seedDB",
         "exportDB": " ",
         "startDB": " ",
         "stopDB": " ",
@@ -52,17 +52,17 @@
     "==MySQL==": " ",
         "createSQL": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
         "seedSQL": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
-    	"reseedSQL": "npm-run-all emptySQL seedSQL",
+    	"reseedSQL": "run-s -l emptySQL seedSQL",
     	"emptySQL": "mysqldump -u$npm_package_config_sql_user -p$npm_package_config_sql_password --add-drop-table --no-data $npm_package_config_sql_database | grep ^DROP | mysql -u$npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database",        
         "dropSQL": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
-        "loadSQL": "npm-run-all createSQL seedSQL",
-        "reloadSQL": "npm-run-all dropSQL loadSQL",
+        "loadSQL": "run-s -l createSQL seedSQL",
+        "reloadSQL": "run-s -l dropSQL loadSQL",
         "exportSQL": " ",
         "startSQL": " ",
         "stopSQL": " ",
         "destroySQL": " ",
     "==UNINSTALL==": " ",
-        "uninstall": "npm-run-all destroyDB destroySQL clean",
+        "uninstall": "run-s -l destroyDB destroySQL clean",
         "clean": "rm -rf tmp/*.*",
     "==OTHER==": " ",
         "cron": "sh scripts/cron.sh",
