renamed compile-css compile-s to css:compile js:compile

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "postinstall": "run-s -l bower-install build",
         "postupdate": "run-s -l bower-update build",
         "build": "npm run compile",
-        "compile": "run-s -l compile-css compile-js",
-        "compile-css": " ",
-        "compile-js": " ",
+        "compile": "run-s -l css:compile js:compile",
+        "css:compile": " ",
+        "js:compile": " ",
         "bower-install": "bower install",
         "bower-update": "bower update",
     "==WATCHING==": " ",
