renamed db tasks

--- a/package.json
+++ b/package.json
@@ -14,41 +14,41 @@
   },
   "scripts": {
     "==BUILDING==": " ",
-        "postinstall": "run-s -l bower-install build",
+        "postinstall": "run-s -l bower:install build",
         "postupdate": "run-s -l bower-update build",
         "build": "npm run compile",
         "compile": "run-s -l css:compile js:compile",
         "css:compile": " ",
         "js:compile": " ",
-        "bower-install": "bower install",
-        "bower-update": "bower update",
+        "bower:install": "bower install",
+        "bower:update": "bower update",
     "==WATCHING==": " ",
-        "watch": "run-s -l watch-css watch-js watch-server",
-        "watch-css": " ",
-        "watch-js": " ",
-        "watch-server": " ",
+        "watch": "run-s -l css:watch js:watch server:watch",
+        "css:watch": " ",
+        "js:watch": " ",
+        "server:watch": " ",
     "==RUNNING==": " ",
         "start": "node server.js",
-        "build-start": "run-s -l build start",
-        "watch-start": "run-s -l watch start",
-        "dev": "run-s -l reload build watch-start",
-        "stop": "run-s -l stopDB stopSQL",
+        "build:start": "run-s -l build start",
+        "watch:start": "run-s -l watch start",
+        "dev": "run-s -l reload build watch:start",
+        "stop": "run-s -l db:stop stopSQL",
     "==TESTING==": " ",
         "test": "mocha test/[^_]*.js --bail",
         "mocha": "mocha",
-        "test-grep": "mocha --grep",
+        "test:grep": "mocha --grep",
         "env": "env",
         "bin": "ls ./node_modules/.bin/",
     "==MongoDB==": " ",
-        "createDB": " ",
-        "importDB": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file ",
-        "seedDB": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
-        "dropDB": "mongo legislators_development --eval 'db.dropDatabase()'",
-        "reloadDB": "run-s -l dropDB seedDB",
-        "exportDB": " ",
-        "startDB": " ",
-        "stopDB": " ",
-        "destroyDB": " ",
+        "db:create": " ",
+        "db:import": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file ",
+        "db:seed": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
+        "db:drop": "mongo legislators_development --eval 'db.dropDatabase()'",
+        "db:reload": "run-s -l db:drop db:seed",
+        "db:export": " ",
+        "db:start": " ",
+        "db:stop": " ",
+        "db:destroy": " ",
     "==MySQL==": " ",
         "createSQL": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
         "seedSQL": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
@@ -62,7 +62,7 @@
         "stopSQL": " ",
         "destroySQL": " ",
     "==UNINSTALL==": " ",
-        "uninstall": "run-s -l destroyDB destroySQL clean",
+        "uninstall": "run-s -l db:destroy destroySQL clean",
         "clean": "rm -rf tmp/*.*",
     "==OTHER==": " ",
         "cron": "sh scripts/cron.sh",
