renamed sql tasks

--- a/package.json
+++ b/package.json
@@ -50,19 +50,19 @@
         "db:stop": " ",
         "db:destroy": " ",
     "==MySQL==": " ",
-        "createSQL": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
-        "seedSQL": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
-    	"reseedSQL": "run-s -l emptySQL seedSQL",
-    	"emptySQL": "mysqldump -u$npm_package_config_sql_user -p$npm_package_config_sql_password --add-drop-table --no-data $npm_package_config_sql_database | grep ^DROP | mysql -u$npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database",        
-        "dropSQL": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
-        "loadSQL": "run-s -l createSQL seedSQL",
-        "reloadSQL": "run-s -l dropSQL loadSQL",
-        "exportSQL": " ",
-        "startSQL": " ",
-        "stopSQL": " ",
-        "destroySQL": " ",
+        "sql:create": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
+        "sql:seed": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
+    	"sql:reseed": "run-s -l sql:empty sql:seed",
+    	"sql:empty": "mysqldump -u$npm_package_config_sql_user -p$npm_package_config_sql_password --add-drop-table --no-data $npm_package_config_sql_database | grep ^DROP | mysql -u$npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database",        
+        "sql:drop": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
+        "sql:load": "run-s -l sql:create sql:seed",
+        "sql:reload": "run-s -l sql:drop sql:load",
+        "sql:export": " ",
+        "sql:start": " ",
+        "sql:stop": " ",
+        "sql:destroy": " ",
     "==UNINSTALL==": " ",
-        "uninstall": "run-s -l db:destroy destroySQL clean",
+        "uninstall": "run-s -l db:destroy sql:destroy clean",
         "clean": "rm -rf tmp/*.*",
     "==OTHER==": " ",
         "cron": "sh scripts/cron.sh",
@@ -79,7 +79,7 @@
       "user": "root",
       "password": "root",
       "database": "database_name",
-      "seed": "/files/database_seed_file.sql"
+      "seed": "/files/seed.sql"
     }
   }
 }
