--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "js:compile": " ",
         "bower:install": "bower install",
         "bower:update": "bower update",
+        "clean": "rm -rf tmp"
     "==WATCHING==": " ",
         "watch": "run-s -l css:watch js:watch server:watch",
         "css:watch": " ",
