--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "bower:install": "bower install",
         "bower:update": "bower update",
 	    "submodule:update": "rm -rf $npm_package_config_submodule_folder && git clone $npm_package_config_submodule_repo $npm_package_config_submodule_folder && rm -rf $npm_package_config_submodule_git",        
-        "clean": "rm -rf tmp"
+        "clean": "rm -rf tmp",
     "==WATCHING==": " ",
         "watch": "run-s -l css:watch js:watch server:watch",
         "css:watch": " ",
@@ -40,7 +40,7 @@
         "mocha": "mocha",
         "test:grep": "mocha --grep",
         "bin": "ls ./node_modules/.bin/",
-    "==MongoDB==": " ",
+    "==MONGODB==": " ",
         "db:create": " ",
         "db:import": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file ",
         "db:seed": "mongoimport -d $npm_package_config_db_database -c $npm_package_config_db_collection --file $npm_package_config_db_seed",
@@ -50,7 +50,7 @@
         "db:start": " ",
         "db:stop": " ",
         "db:destroy": " ",
-    "==MySQL==": " ",
+    "==MYSQL==": " ",
         "sql:create": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
         "sql:seed": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
     	"sql:reseed": "run-s -l sql:empty sql:seed",
