adding and implementing log.sh Log Init script

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "==UNINSTALL==": " ",
     "uninstall": "run-s -l db:destroy sql:destroy clean",
     "==OTHER==": " ",
+    "log:init": "sh scripts/log.sh",
     "cron": "sh scripts/cron.sh",
     "archive": "node scripts/archive.js"
   },
