--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "compile": "run-s -l css:compile js:compile",
     "css:compile": " ",
     "js:compile": " ",
+    "==INSTALLING==": " ",    
     "bower:install": "bower install",
     "bower:update": "bower update",
     "composer:build": "run-s -l composer:update composer:install",
     "composer:update": "composer update",
     "composer:install": "composer install",
     "npm:install": "npm install",
-    "modules:install": "run-s -l composer:build npm:install bower:install",    
+    "modules:install": "run-s -l composer:build npm:install bower:install", 
+    "==OTHER==": " ",       
     "submodule:update": "rm -rf $npm_package_config_submodule_folder && git clone $npm_package_config_submodule_repo $npm_package_config_submodule_folder && rm -rf $npm_package_config_submodule_git",
     "clean": "rm -rf tmp/*.*",
     "==WATCHING==": " ",
